# BABEL-tauri

./: .eslintrc.cjs  .eslintrc.yml  .gitignore  .prettierrc  .stylelintrc  .stylelintrc.yml  README.md  index.html  jest.config.cjs  jest.config.json  package-lock.json  package.json  plopfile.js  svelte.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: build_and_test.yml  pr-check.yml  test.yml
.husky/: commit-msg  pre-commit  pre-push
.storybook/: main.cjs  main.js  preview-head.html  preview.cjs  preview.jsx
generators/component/: Component.stories.tsx.hbs  Component.tsx.hbs  index.js
src/: App.svelte  App.tsx  main.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/database/: Cargo.toml
src-tauri/database/.cargo/: config.toml
src-tauri/database/prisma/: schema.prisma
src-tauri/database/prisma/migrations/20230101174306_init/: migration.sql
src-tauri/database/prisma/migrations/20230104111453_add_root_directory/: migration.sql
src-tauri/database/prisma/migrations/20230104112857_update_root_directory/: migration.sql
src-tauri/database/prisma/migrations/20230105130746_path_to_unique/: migration.sql
src-tauri/database/prisma/migrations/20230105131911_add_order/: migration.sql
src-tauri/database/prisma/migrations/20230105134807_delete_order_column/: migration.sql
src-tauri/src/: audio.rs  file.rs  handler.rs  main.rs
src-tauri/src/api/: app.rs  mod.rs
src-tauri/src/command/: audio.rs  file.rs  mod.rs
src-tauri/src/handler/: audio_playback_handler.rs  directories_event_handler.rs  files_event_handler.rs  mod.rs
src-tauri/src/helper/: convert.rs  mod.rs
src-tauri/src/model/: app.rs  audio.rs  file_info.rs  mod.rs
src-tauri/src/router/: app.rs  mod.rs  root_directory.rs
src/assets/styles/: app.scss  font.scss  global-style.ts  index.scss  main.scss  mixin.ts  theme.css  variables.scss
src/backend/: DirectoryTauriCommand.ts  FileBrowserTauriCommand.ts
src/components/: App.tsx  extensions.d.ts
src/components/Elements/: index.ts
src/components/Elements/Button/: Button.stories.tsx  Button.test.tsx  Button.tsx
src/components/Elements/Slider/: Slider.stories.tsx  Slider.tsx
src/components/Elements/Tag/: Tag.stories.tsx  Tag.tsx  Tags.stories.tsx  index.ts
src/components/Elements/Tags/: Tags.stories.tsx  Tags.tsx
src/components/Elements/Tooltip/: TooltipContainer.stories.tsx  TooltipContainer.tsx  (+1 more)
src/components/Global/: index.ts
src/components/Layout/: MainLayout.tsx
src/components/layouts/: FileItem.tsx  FileList.tsx  GlobalHeader.stories.tsx  GlobalHeader.tsx  PlaybackControl.stories.tsx  PlaybackControl.tsx  SideNav.stories.tsx  SideNav.tsx
src/components/pages/: Browse.tsx  Browser.tsx
src/core/entities/: index.ts  root-directory-entity.ts
src/core/repositories/: index.ts  root-directory-repository.ts
src/core/services/: index.ts  root-directory-service.ts
src/core/types/: index.ts
src/core/utils/: decorators.ts  time.ts
src/core/values/: base.ts  file-path.ts
src/features/audio/: index.ts
src/features/browser/: di.ts  index.ts
src/features/misc/: di.ts
src/hooks/: useAnimationFrame.ts  useAudioPlayback.ts
src/interfaces/: audio.ts  file.ts  project.ts  tag.ts
src/lib/: Counter.svelte  FileList.stories.ts  FileList.svelte  FileList.test.ts  FileListItem.stories.ts  FileListItem.svelte  FileListItem.test.ts
src/lib/base/: Button.svelte  Button.test.ts
src/providers/: app.tsx
src/repositories/: DirectoryRepository.ts  FileBrowserRepository.ts
src/routes/: index.tsx
src/services/: DirectoryService.ts  FileBrowserService.ts
src/slice/: audioPlaybackSlice.ts  filesSlice.ts
src/stores/: index.ts
src/stories/: Button.svelte  Header.stories.js  Header.svelte  Page.stories.js  Page.svelte  button.scss  header.scss  page.scss
src/styles/: index.ts
src/types/: index.ts
src/types/rspc/: bindings.ts
src/utils/: animation.ts  client.ts  math.test.ts  time.test.ts  time.ts
(+108 files in other folders)
