[package]
name = "app"
version = "0.1.0"
description = "sound files management application"
authors = ["shunsukeoka"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.62.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0.148", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
chrono = "0.4.22"
mime_guess = "2.0.4"
crossbeam-channel = "0.5.6"
kira = "0.7.1"
lofty = "0.9.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
