[package]
name = "app"
version = "0.1.0"
description = "sound files management application"
authors = ["shunsukeoka"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.62.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.94"
serde = { version = "1.0.155", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }
anyhow = "1.0.69"
thiserror = "1.0.39"
chrono = "0.4.24"
mime_guess = "2.0.4"
crossbeam-channel = "0.5.7"
kira = "0.7.1"
lofty = "0.11.0"
tokio = { version = "1.26.0", features = ["full"] }
rspc = { version = "0.1.3", features = ["tauri"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.6.6", features = [
    "rspc",
    "sqlite-create-many",
    "migrations",
    "sqlite",
], default-features = false }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
